--- a/mydata/data_app/templates/base/main.html
+++ b/mydata/data_app/templates/base/main.html
@@ -13,10 +13,19 @@
 </head>
 
   
-<body id='bg' style="background-image: url('{% static 'img/road2.jpg'%}');">
+<body id='bg' style="background-image: url('{% static 'img/road3.jpg'%}');">
+
+    <!-- <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Jobs</a>
+        <a href="feedback.html">Contact us</a>
+        <div class="animation start-home"></div>
+    </nav> -->
 
 
-    {% include 'navbar.html' %}
+    {% include 'base/navbar.html' %}
     {% block content %}
 
     
