--- a/mydata/data_app/templates/base/end_point.html
+++ b/mydata/data_app/templates/base/end_point.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h1>Create End Point</h1>
+<!-- <h1>Create End Point</h1> -->
     
 <!-- Display form errors if any -->
 {% if end_form.errors %}
@@ -17,8 +17,11 @@
 <!-- End Point Form -->
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ end_form.as_p }}
-    <button type="submit">Submit</button>
+    <h3 id="end_form">
+        {{ endpoint_form.as_p }}
+    </h3>
+    
+    <button class="btn btn--main" href="{% url 'submit_data' %}">Submit</button>
 </form>
 
 <!-- Display success message if it exists -->
