--- a/mydata/data_app/templates/base/start_point.html
+++ b/mydata/data_app/templates/base/start_point.html
@@ -1,22 +1,22 @@
-<!-- create_start_point.html -->
 
-{% block content %}
-    <h1>Create Start Point</h1>
-    
-    <!-- Display form errors if any -->
-    {% if start_form.errors %}
-        <ul>
-            {% for error in start_form.errors %}
-                <li>{{ error }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-    
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endif %}
     <!-- Start Point Form -->
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ start_form.as_p }}
-        <button type="submit">Submit</button>
+        <h3 id="start_form">
+            {{ startpoint_form.as_p }}
+        </h3>
+        <!-- <p>{{ start_form.start_point_chainage.label_tag }} {{ start_form.start_point_chainage }}</p>
+        <p>{{ start_form.location.label_tag }} {{ start_form.location }}</p>
+        <p>{{ start_form.photo.label_tag }} {{ start_form.photo }}</p> -->
+
+        <button class="btn btn--main" href="{% url 'submit_data' %}">Submit</button>
     </form>
     
     <!-- Display success message if it exists -->
@@ -25,10 +25,6 @@
     {% endif %}
 </body>
 </html>
-
-
-{% endblock %}
-
 
 <!-- <!DOCTYPE html>
 <html>
