--- a/mydata/data_app/templates/base/all_data.html
+++ b/mydata/data_app/templates/base/all_data.html
@@ -34,6 +34,7 @@
                 <th>Field 23</th>
                 <th>Field 24</th>
                 <th>Field 25</th>
+                <th>Field 26</th>
             </tr>
         </thead>
         <tbody>
@@ -66,6 +67,7 @@
                 <td>{{ item.field23 }}</td>
                 <td>{{ item.field24 }}</td>
                 <td>{{ item.field25 }}</td>
+                <td>{{ item.field26 }}</td>
             </tr>
             {% endfor %}
         </tbody>
