--- a/mydata/data_app/templates/base/user_data.html
+++ b/mydata/data_app/templates/base/user_data.html
@@ -13,7 +13,29 @@
                 <th>Field 1</th>
                 <th>Field 2</th>
                 <th>Field 3</th>
-                <!-- Add more table headers for other fields -->
+                <th>Field 4</th>
+                <th>Field 5</th>
+                <th>Field 6</th>
+                <th>Field 7</th>
+                <th>Field 8</th>
+                <th>Field 9</th>
+                <th>Field 10</th>
+                <th>Field 11</th>
+                <th>Field 12</th>
+                <th>Field 13</th>
+                <th>Field 14</th>
+                <th>Field 15</th>
+                <th>Field 16</th>
+                <th>Field 17</th>
+                <th>Field 18</th>
+                <th>Field 19</th>
+                <th>Field 20</th>
+                <th>Field 21</th>
+                <th>Field 22</th>
+                <th>Field 23</th>
+                <th>Field 24</th>
+                <th>Field 25</th>
+                <th>Field 26</th>
             </tr>
         </thead>
         <tbody>
@@ -22,7 +44,30 @@
                 <td>{{ item.field1 }}</td>
                 <td>{{ item.field2 }}</td>
                 <td>{{ item.field3 }}</td>
-                <!-- Add more table cells for other fields -->
+                <td>{{ item.field4 }}</td>
+                <td>{{ item.field5 }}</td>
+                <td>{{ item.field5 }}</td>
+                <td>{{ item.field6 }}</td>
+                <td>{{ item.field7 }}</td>
+                <td>{{ item.field8 }}</td>
+                <td>{{ item.field9 }}</td>
+                <td>{{ item.field10 }}</td>
+                <td>{{ item.field11 }}</td>
+                <td>{{ item.field12 }}</td>
+                <td>{{ item.field13 }}</td>
+                <td>{{ item.field14 }}</td>
+                <td>{{ item.field15 }}</td>
+                <td>{{ item.field16 }}</td>
+                <td>{{ item.field17 }}</td>
+                <td>{{ item.field18 }}</td>
+                <td>{{ item.field19 }}</td>
+                <td>{{ item.field20 }}</td>
+                <td>{{ item.field21 }}</td>
+                <td>{{ item.field22 }}</td>
+                <td>{{ item.field23 }}</td>
+                <td>{{ item.field24 }}</td>
+                <td>{{ item.field25 }}</td>
+                <td>{{ item.field26 }}</td>
             </tr>
             {% endfor %}
         </tbody>
